The project name was set to "Pong".

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>Title of the document</title>
+    <title>Pong</title>
 	<!-- build:css css/bundle.css -->
     <link rel="stylesheet" type="text/css" href="css/reset.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
