AMD was used to load modules.

--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,6 @@
   </head>
   <body>
 	<div class="container"></div>
-	<!-- build:js js/bundle.js -->
-	<script src="../bower_components/jquery/dist/jquery.js"></script>
-	<script src="../bower_components/underscore/underscore.js"></script>
-	<script src="../bower_components/backbone/backbone.js"></script>
-	<script src="js/tmpl/game.js"></script>
-	<script src="js/tmpl/main.js"></script>
-	<script src="js/tmpl/scores.js"></script>
-	<script src="js/app.js"></script>
-	<!-- endbuild -->
+	<script data-main="js/app" src="js/lib/require.js"></script>
   </body>
 </html>
