--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
 	<div class="container"></div>
-	<script data-main="js/app" src="js/lib/require.js"></script>
+	<script data-main="js/main" src="js/lib/require.js"></script>
   </body>
 </html>
